[package]
name = "nss-gk-api"
version = "0.1.0"
authors = ["Martin Thomson <mt@lowentropy.net>", "Andy Leiserson <aleiserson@mozilla.com>", "John M. Schanck <jschanck@mozilla.com>"]
edition = "2018"
rust-version = "1.57.0"
license = "MIT/Apache-2.0"
description = "Gecko API for NSS"
repository = "https://github.com/mozilla/nss-gk-api"

[dependencies]
once_cell = "1"
log = {version = "0.4.0", default-features = false}
pkcs11-bindings = "0.1.2"

[build-dependencies]
bindgen = {version = "0.63", default-features = false, features= ["runtime"]}
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
mozbuild = {version = "0.1", optional = true}

[dev-dependencies]
test-fixture = {path = "test-fixture"}

[features]
default = ["deny-warnings"]
deny-warnings = []
gecko = ["mozbuild"]
fuzzing = []
