[package]
name = "nss-gk-api"
version = "0.3.0"
authors = ["Martin Thomson <mt@lowentropy.net>", "Andy Leiserson <aleiserson@mozilla.com>", "John M. Schanck <jschanck@mozilla.com>"]
edition = "2018"
rust-version = "1.70.0"
build = "build.rs"
license = "MIT/Apache-2.0"
description = "Gecko API for NSS"
repository = "https://github.com/mozilla/nss-gk-api"

[dependencies]
once_cell = "1"
log = {version = "~0.4.17", default-features = false}
pkcs11-bindings = ">= 0.1.3"

[build-dependencies]
bindgen = {version = "0.69.1", default-features = false, features= ["runtime"]}
mozbuild = {version = "0.1", optional = true}
serde = "1.0.195"
serde_derive = "1.0.195"
toml = "0.5.11"

[dev-dependencies]
test-fixture = {path = "test-fixture"}

[features]
deny-warnings = []
gecko = ["mozbuild"]
fuzzing = []
