[package]
name = "nss-gk-api"
version = "0.3.0"
authors = ["Martin Thomson <mt@lowentropy.net>", "Andy Leiserson <aleiserson@mozilla.com>", "John M. Schanck <jschanck@mozilla.com>", "Benjamin Beurdouche <beurdouche@mozilla.com>", "Anna Weine <anna.weine@mozilla.com>"]
edition = "2021"
rust-version = "1.82.0"
build = "build.rs"
license = "MIT/Apache-2.0"
description = "Gecko API for NSS"
repository = "https://github.com/mozilla/nss-gk-api"

[dependencies]
enum-map = { version = "2.7", default-features = false }
once_cell = "1"
# Sync with https://searchfox.org/mozilla-central/source/Cargo.lock 2024-02-08
log = {version = "0.4", default-features = false}
pkcs11-bindings = ">= 0.1.3"
strum = { version = "0.27", default-features = false, features = ["derive"] }

[build-dependencies]
# Sync with https://searchfox.org/mozilla-central/source/Cargo.lock 2024-02-08
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
mozbuild = { version = "0.1", default-features = false, optional = true }
semver = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
toml = { version = "0.5", default-features = false }

[dev-dependencies]
test-fixture = {path = "test-fixture"}

[features]
bench = []
deny-warnings = []
disable-encryption = []
disable-random = []
gecko = ["mozbuild"]

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
